# dns-resolver

./: README.md
dnssec-example/: PutSIG.hs  StatePut.hs  StatePutGeneric.hs  dnssec-example.cabal  rrsig.hs  rrsigECDSA.hs  rrsigECDSAtc.hs
dnssec-example/script/: ds.sh
qtest/: QuerySpec.hs
src/DNSC/: Concurrent.hs  Iterative.hs  Queue.hs  Server.hs  SocketUtil.hs
