cabal-version:      2.4
name:               dnssec-example
version:            0.1.0.0

-- synopsis:

-- description:

-- bug-reports:

-- license:
author:             Kei Hibino
maintainer:         ex8k.hibino@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library
  build-depends:
                       -- GHC packages
                       base >=4 && <5
                     , bytestring
                     , containers
                     , transformers
                     , time

                       -- other packages
                     , memory
                     , cryptonite
                     , iproute
                     , dns

  default-language: Haskell2010
